PA_Education/TestMenifest/force-app/main/default/objects/PJT_Employee_evaluation__c/PJT_Employee_evaluation__c.object-meta.xml
<CustomObject>
    <description>프로젝트 투입인력에 대한 평가 저장</description>
    <label>프로젝트 인력평가</label>
    <nameField>
        <displayFormat>No.{0000}</displayFormat>
        <label>Evaluation No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>