PA_Education/TestMenifest/force-app/main/default/objects/PJT_Employee_evaluation__c/fields/Additional_Comment__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comment__c</fullName>
    <label>비고 (기타의견)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>