PA_Education/TestMenifest/force-app/main/default/objects/PJT_Employee_evaluation__c/fields/Addtional_Work__c.field-meta.xml
<CustomField>
    <fullName>Addtional_Work__c</fullName>
    <label>기타 수행업무</label>
    <length>255</length>
    <type>Text</type>
</CustomField>