PA_Education/TestMenifest/force-app/main/default/objects/PJT_Employee_evaluation__c/fields/Communication_Skill__c.field-meta.xml
<CustomField>
    <fullName>Communication_Skill__c</fullName>
    <label>Communication Skill</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>