PA_Education/TestMenifest/force-app/main/default/objects/PJT_Employee_evaluation__c/fields/Evaluation_Type__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Type__c</fullName>
    <description>1차평가, 최종평가 구분값</description>
    <label>평가구분</label>
    <length>255</length>
    <type>Text</type>
</CustomField>