PA_Education/TestMenifest/force-app/main/default/objects/PJT_Employee_evaluation__c/fields/Fm_Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Fm_Total_Score__c</fullName>
    <formula>CASE(Attitude__c , &apos;S&apos;, 5, &apos;A&apos;, 3, &apos;B&apos;, 1, &apos;C&apos;, 1, 0) 
+
CASE(Communication_Skill__c, &apos;S&apos;, 5, &apos;A&apos;, 3, &apos;B&apos;, 1, &apos;C&apos;, 1, 0) 
+
CASE(Competency__c, &apos;S&apos;, 5, &apos;A&apos;, 3, &apos;B&apos;, 1, &apos;C&apos;, 1, 0) 
+
CASE(Cooperation__c, &apos;S&apos;, 5, &apos;A&apos;, 3, &apos;B&apos;, 1, &apos;C&apos;, 1, 0) 
+
CASE(Passion__c, &apos;S&apos;, 5, &apos;A&apos;, 3, &apos;B&apos;, 1, &apos;C&apos;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>평가 총합</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>