PA_Education/TestMenifest/force-app/main/default/objects/PJT_Employee_evaluation__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>이름</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>프로젝트 인력평가</relationshipLabel>
    <relationshipName>ProjectEvaluation</relationshipName>
    <type>Lookup</type>
</CustomField>