PA_Education/TestMenifest/force-app/main/default/objects/PJT_Employee_evaluation__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>프로젝트</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>프로젝트 인력평가</relationshipLabel>
    <relationshipName>Proejct_evaluation</relationshipName>
    <type>Lookup</type>
</CustomField>